ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/EFK/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    name: kubeprod
  name: kubeprod
