ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/EFK/daemon_set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations: {}
  labels:
    name: fluentd-es
  name: fluentd-es
  namespace: kubeprod
spec:
  selector:
    matchLabels:
      name: fluentd-es
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "24231"
        prometheus.io/scrape: "true"
        scheduler.alpha.kubernetes.io/critical-pod: ""
      labels:
        name: fluentd-es
    spec:
      containers:
      - args:
        - --config=/opt/bitnami/fluentd/conf/fluentd.conf
        - --plugin=/opt/bitnami/fluentd/plugins
        - --log=/opt/bitnami/fluentd/logs/fluentd.log
        - --log-rotate-age=5
        - --log-rotate-size=104857600
        - --no-supervisor
        command:
        - fluentd
        image: bitnami/fluentd:1.11.1-debian-10-r27
        imagePullPolicy: IfNotPresent
        name: fluentd-es
        ports: []
        resources:
          limits:
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          runAsUser: 0
        stdin: false
        tty: false
        volumeMounts:
        - mountPath: /opt/bitnami/fluentd/conf
          name: config
          readOnly: true
        - mountPath: /opt/bitnami/fluentd/conf/config.d
          name: configd
          readOnly: true
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
        - mountPath: /var/log
          name: varlog
          readOnly: true
        - mountPath: /var/log/fluentd-buffers
          name: varlogbuffers
        - mountPath: /var/log/fluentd-pos
          name: varlogpos
      imagePullSecrets: []
      initContainers: []
      serviceAccountName: fluentd-es
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          name: fluentd-es-30f242f
        name: config
      - configMap:
          name: fluentd-es-configd-cbf6e63
        name: configd
      - hostPath:
          path: /var/lib/docker/containers
          type: Directory
        name: varlibdockercontainers
      - hostPath:
          path: /var/log
          type: Directory
        name: varlog
      - hostPath:
          path: /var/log/fluentd-buffers
          type: DirectoryOrCreate
        name: varlogbuffers
      - hostPath:
          path: /var/log/fluentd-pos
          type: DirectoryOrCreate
        name: varlogpos
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
