ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/EFK/deployment_4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    name: kibana
  name: kibana
  namespace: kubeprod
spec:
  minReadySeconds: 30
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: kibana
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      labels:
        name: kibana
    spec:
      containers:
      - args: []
        image: bitnami/kibana:7.8.0-debian-10-r2
        imagePullPolicy: IfNotPresent
        name: kibana
        ports:
        - containerPort: 5601
          name: ui
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 10m
        securityContext:
          runAsUser: 1001
        stdin: false
        tty: false
        volumeMounts:
        - mountPath: /opt/bitnami/kibana/plugins
          name: plugins
      imagePullSecrets: []
      securityContext:
        fsGroup: 1001
      terminationGracePeriodSeconds: 30
      volumes:
      - name: plugins
        persistentVolumeClaim:
          claimName: kibana-plugins
