ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/EFK/stateful_set_6.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations: {}
  labels:
    k8s-app: elasticsearch-logging
    name: elasticsearch-logging
  name: elasticsearch-logging
  namespace: kubeprod
spec:
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      k8s-app: elasticsearch-logging
      name: elasticsearch-logging
  serviceName: elasticsearch-logging
  template:
    metadata:
      annotations:
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"
      labels:
        k8s-app: elasticsearch-logging
        name: elasticsearch-logging
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  k8s-app: elasticsearch-logging
                  name: elasticsearch-logging
              topologyKey: kubernetes.io/hostname
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  k8s-app: elasticsearch-logging
                  name: elasticsearch-logging
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 70
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  k8s-app: elasticsearch-logging
                  name: elasticsearch-logging
              topologyKey: failure-domain.beta.kubernetes.io/region
            weight: 70
      containers:
      - args: []
        image: bitnami/elasticsearch:7.8.0-debian-10-r1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /_cluster/health?local=true
            port: db
          initialDelaySeconds: 300
          periodSeconds: 30
          successThreshold: 1
        name: elasticsearch-logging
        ports:
        - containerPort: 9200
          name: db
        - containerPort: 9300
          name: transport
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /_cluster/health?local=true
            port: db
          initialDelaySeconds: 120
          periodSeconds: 30
          successThreshold: 2
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1200Mi
        securityContext:
          runAsUser: 1001
        stdin: false
        tty: false
        volumeMounts:
        - mountPath: /bitnami/elasticsearch/data
          name: data
        - mountPath: /opt/bitnami/java/lib/security/java.security.custom
          name: java-security
          readOnly: true
          subPath: java.security
      - args:
        - --es.timeout=20s
        - --es.uri=http://localhost:9200/
        - --web.listen-address=:9102
        - --web.telemetry-path=/metrics
        command:
        - elasticsearch_exporter
        env: []
        image: bitnami/elasticsearch-exporter:1.1.0-debian-10-r84
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: metrics
        name: prom-exporter
        ports:
        - containerPort: 9102
          name: metrics
        stdin: false
        tty: false
        volumeMounts: []
      imagePullSecrets: []
      securityContext:
        fsGroup: 1001
      serviceAccountName: elasticsearch-logging
      terminationGracePeriodSeconds: 300
      volumes:
      - configMap:
          name: java-elasticsearch-logging-13cadd4
        name: java-security
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      labels:
        name: data
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "rook-cephfs"
      resources:
        requests:
          storage: 10Gi
