ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/EFK/service_12.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  labels:
    k8s-app: elasticsearch-logging
    kubernetes.io/name: Elasticsearch
    name: elasticsearch-logging
  name: elasticsearch-logging
  namespace: kubeprod
spec:
  clusterIP: None
  ports:
  - name: db
    port: 9200
    targetPort: 9200
  publishNotReadyAddresses: true
  selector:
    k8s-app: elasticsearch-logging
    name: elasticsearch-logging
  sessionAffinity: None
  type: ClusterIP
