ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/EFK/service_9.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    name: kibana-logging
  name: kibana-logging
  namespace: kubeprod
spec:
  ports:
  - name: ui
    port: 5601
    targetPort: 5601
  selector:
    name: kibana
  type: ClusterIP
